[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
image = "0.24"
once_cell = "1.19"
rand = "0.8"
ring = "0.17"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
futures = "0.3"
tokio = {version = "1.32.0", features = ["full"]}
solana-program = "=1.14.29"
solana-client = "=1.14.29"
solana-sdk = "=1.14.29"
borsh = "0.10"
bs58 = "0.5"

[dependencies.mongodb]
version = "2.8"
features = ["sync"]
