[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
image = "0.25.6"
once_cell = "1.21.3"
rand = "0.9.1"
ring = "0.17.14"
thiserror = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.7"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
rustfmt = "0.10.0"
solana-sdk = "1.17.0"
solana-client = "1.17.0"
solana-program = "1.17.0"
bs58 = "0.5.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "3.2.3"
features = ["dns-resolver"]
